--- a/style.css
+++ b/style.css
@@ -1,30 +1,44 @@
-*{
-    /* background: black; */
-    color: black; 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+.wrapper{
+    display: grid;
+    grid-template-columns: repeat(5, 20vw);
+    grid-template-rows: repeat(9, 20vw);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    /* width: 100vw;
+    height: 100vh; */
+    /* justify-content: center;
+    align-content: center; */
+}
+.backpic{
+    grid-column: 1/-1;
+    /* background-image: url(city.jpg); */
+    grid-row: 1/3;
+}
+img.city{
+    width: 100%;
+    height: auto;
+}
+.name{
+    grid-column: 1/6;
+    grid-row: 2;
+    text-align: center;
+    color: white;
+    font-size: 160px;
+    animation: fadein 5s;
+    font-weight: bold;
+}
+.menu{
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    animation: 3s ease-out 0s 1 slideRight;
 }
 a{
     text-decoration: none;
-    color: inherit
+    /* color: inherit */
 }
-body{
-    padding-top: 2%;
-}
-img {
-    border-radius: 50%;
-    width: 420px;
-    height: 420px;
-}
-/* navbar start */
-/* if kept, keeps menu to right scroll on mobile */
-/* .menu{
-    width: 900px;
-    margin: 0 auto;
-} */
-.menu ul{
+ul{
     list-style: none;
-    margin-top: 2%;
-    text-decoration: none;
 }
 .menu ul li{
     width: 140px;
@@ -32,85 +46,134 @@ img {
     height: 50px;
     line-height: 50px;
     text-align: center;
-    /* float: right; */
-    /* background-color: white; */
-    color: black;
     font-size: 14px;
-    /* position: relative; */
 }
 .menu ul li:hover{
-    color:red;
+    color:#C43217;
 }
-/* navbar end */
-/* grid layout start */
-.wrapper{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
-    /* background-color: chartreuse; */
-}
-.name{
-    grid-column: 2/5;
-    grid-row: 2/4;
-    font-size: 70px;
-    padding-bottom: 25%;
-}
-.menu{
-    grid-column: 1/6;
-    grid-row: 1;
-    font-size: 30px;
+.arrow{
     position: fixed;
-    right: 10px;
-    top: 10px;
-    /* background-color: white; */
-}
-.pic{
+    left: 50px;
+    bottom: 10px;
+    font-size: 100px;
+    opacity: 60%;
+    animation: 4s ease-out 0s 1 slideDown;
     /* display: none; */
-    padding-top: 20%;
-    margin-left: 30%;
-    grid-row: 4;
-    grid-column: 3/5;
 }
-.cv{
+.bio{
     grid-column: 2/5;
-    grid-row: 5;
-    font-size: 70px;
-    text-align: center;
-    padding-top: 50%;
-    padding-bottom: 50%;
+    grid-row: 4/5;
+    /* padding: 16%; */
+    /* margin-left: 40%;
+    margin-right: 10%; */
+    z-index: 100;
+    font-size: 20px;
+    /* margin-top: 20%; */
+    margin: 25% 0% 0% 30%;
+    padding-left: 15%;
 }
-/* .bio{
-    grid-column: 1/6;
-    grid-row: 5;
-     background-color: aqua;
-} */
-.text{
-    padding-top: 25%;
-    margin-top: 15%;
-    padding-left: 20%;
+.biopic{
     grid-column: 1/3;
     grid-row: 4;
-    font-size: 20px;
-    /* text-align: right; */
+    padding-top: 40%;
+    padding-left: 30%;
+    padding-right: 10%;
+}
+img#circle{
+    border-radius: 50%;
+    max-width: 400px;
+    max-height: 400px;
+}
+.links{
+    grid-column: 2/6;
+    grid-row: 6;
+    text-align: center;
+    margin-left: 13%;
+}
+.click{
+    font-size: 60px;
+    -webkit-text-stroke: 1px white;
+    -webkit-text-fill-color: transparent;
+    padding: 3%;
+    transition: transform 500ms;
+    /* background: white; */
+    color: white;
+    /* border-radius: 50%; */
+    /* border-radius: 50%; */
+    margin-right: 50px;
+    /* height: 50px;
+    width: 50px; */
+}
+.click:hover{
+    -webkit-text-fill-color: white;
+}
+.workpics{
+    grid-column: 1/-1;
+    grid-row: 7;
+    margin-left: 12%;
+    margin-right: 12%;
+}
+#bttmpic{
+    height: 500px;
+    width: auto;
+    padding: 2%;
+    z-index: -1;
     /* display: none; */
 }
-.bar{
-    border-right: 6px solid red;
-    height: 300px;
-    grid-row: 4;
-    grid-column: 3;
-    /* padding-right: 30%; */
-    margin-right: 70%;
-    margin-top: 60%;
-}
-.work{
+.worktext{
+    color: pink;
+    /* grid-column: 1/-1; */
+    grid-row: 8;
+    /* grid-column: span; */
+    /* text-align: center; */
+    /* text-orientation: sideways; */
+    transform: rotate(-90deg);
+    font-size: 75px;
     display: none;
 }
-/* grid layout end */
-h1:hover{
-    color:red;
+/* a.txt1{
+    color: green;
+    grid-row: 8;
 }
-p a:hover{
-    color:red;
+a.txt2{
+    color: green;
+    grid-row: 8;
+}
+a.txt3{
+    color: green;
+    grid-row: 8;
+} */
+body{
+    overflow-x: hidden;
+    background-color: #C43217;
+    font-family: Verdana, sans-serif, monospace;
+    text-transform: uppercase;
+    padding: 0%;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }    
+}
+@keyframes slideDown {
+    0% {
+      transform: translateY(-1000%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+}
+@keyframes slideRight {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+}
+/* h1{
+    color: white;
+    font-size: 160px;
+} */
+*{
+    color: white;
 }
