--- a/mobile.css
+++ b/mobile.css
@@ -1,6 +1,6 @@
 .wrapper{
     display: grid;
-    grid-template-columns: repeat(4, 20vw);
+    grid-template-columns: repeat(5, 18vw);
     grid-template-rows: repeat(9, 20vw);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
@@ -36,7 +36,7 @@ ul{
     list-style: none;
 }
 .menu ul li{
-    width: 140px;
+    width: 80px;
     border: 1px ;
     height: 50px;
     line-height: 50px;
@@ -48,7 +48,7 @@ ul{
 }
 .arrow{
     position: fixed;
-    left: 20px;
+    left: 3vw;
     bottom: 10px;
     font-size: 100px;
     opacity: 60%;
@@ -80,6 +80,7 @@ img#circle{
     max-height: auto;
 }
 .links{
+    margin-top: 10%;
     grid-column: 1/4;
     grid-row: 6;
     /* float: left; */
@@ -101,6 +102,7 @@ img#circle{
 .workpics{
     grid-column: 1/4;
     float: right;
+    margin-left: 10%;
     grid-row: 7/9;
     /* margin-left: 12%;
     margin-right: 12%; */
