--- a/mobile.css
+++ b/mobile.css
@@ -1,51 +1,60 @@
 .wrapper{
     display: grid;
     grid-template-columns: repeat(5, 18vw);
-    grid-template-rows: repeat(9, 20vw);
+    grid-template-rows: repeat(14, 20vw);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
 }
+
 .backpic{
     grid-column: 1/-1;
-    grid-row: 1/4;
+    grid-row: 1/3;
 }
+
 img.city{
-    width: 100vw;
+    width: 90vw;
     height: auto;
+    border-radius: 10px;
 }
+
 .name{
-    grid-column: 1/-1;
+    grid-column: 1/6;
     grid-row: 2;
-    /* padding-top: 10%; */
     text-align: center;
     color: white;
-    font-size: 10vw;
+    font-size: 8vw;
     animation: fadein 5s;
     font-weight: bold;
 }
+
 .menu{
     position: fixed;
     right: 1vw;
-    top: 4vh;
+    top: 2vh;
     animation: 3s ease-out 0s 1 slideRight;
 }
+
 a{
     text-decoration: none;
 }
+
 ul{
     list-style: none;
 }
+
 .menu ul li{
     width: 80px;
     border: 1px ;
     height: 50px;
     line-height: 50px;
-    text-align: center;
-    font-size: 14px;
+    text-align: right;
+    font-size: 20px;
 }
+
 .menu ul li:hover{
     color:#C43217;
 }
+
 .arrow{
     position: fixed;
     left: 3vw;
@@ -53,80 +62,57 @@ ul{
     font-size: 100px;
     opacity: 60%;
     animation: 4s ease-out 0s 1 slideDown;
-    /* display: none; */
 }
+
 .bio{
-    grid-column: 1/3;
-    grid-row: 4/6;
-    /* padding: 16%; */
-    /* margin-left: 40%;
-    margin-right: 10%; */
-    z-index: 100;
+    grid-column: 2/5;
+    grid-row: 8;
     font-size: 2.5vw;
-    /* margin-top: 20%; */
-    margin: 2% 10% 0% 2%;
-    /* padding-left: 15%; */
+    margin-top: 15 vh;
 }
+
 .biopic{
-    grid-column: 3/4;
-    grid-row: 4/7;
-    /* padding-top: 40%; */
-    /* padding-left: 30%;
-    padding-right: 10%; */
+    grid-column: 2/5;
+    grid-row: 4/5;
+    margin: 0 auto;
+    display: block;
 }
+
 img#circle{
     border-radius: 50%;
     max-width: 50vw;
     max-height: auto;
 }
+
 .links{
-    margin-top: 10%;
-    grid-column: 1/4;
-    grid-row: 6;
-    /* float: left; */
-    /* margin-left: 13%; */
+    grid-column: 2/5;
+    grid-row: 7;
+    text-align: center;
 }
+
 .click{
-    /* padding-top: 5vw; */
     font-size: 9vw;
     -webkit-text-stroke: 1px white;
     -webkit-text-fill-color: transparent;
-    /* padding: 3%; */
-    /* transition: transform 500ms; */
     color: white;
-    /* margin-right: 50px; */
 }
+
 .click:hover{
     -webkit-text-fill-color: white;
 }
-.workpics{
-    grid-column: 1/4;
-    float: right;
-    margin-left: 10%;
-    grid-row: 7/9;
-    /* margin-left: 12%;
-    margin-right: 12%; */
-    /* transform: rotate(90deg); */
-    display: flex;
-    align-items: center;
-}
-#bttmpic{
-    height: 45vw;
-    padding: 1vw;
-    width: auto;
-    /* padding-left: 3%; */
-    z-index: -1;
-}
+
 .worktext{
-    color: pink;
-    grid-row: 8;
-    transform: rotate(-90deg);
-    font-size: 75px;
-    display: none;
+    grid-column: 2/5;
+    grid-row: 12;
+    text-align: center;
+    font-size: 8vw;
+}
+.worktext:hover{
+    font-size: 10vw;
 }
 body{
     overflow-x: hidden;
-    background-color: #C43217;
+    background-color: #FF7D52;
     font-family: Verdana, sans-serif, monospace;
     text-transform: uppercase;
     padding: 1%;
