--- a/style.css
+++ b/style.css
@@ -4,156 +4,135 @@
     grid-template-rows: repeat(9, 20vw);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
-    /* width: 100vw;
-    height: 100vh; */
-    /* justify-content: center;
-    align-content: center; */
 }
+
 .backpic{
     grid-column: 1/-1;
-    /* background-image: url(city.jpg); */
     grid-row: 1/3;
 }
+
 img.city{
-    width: 100%;
+    padding-top: 4vh;
+    width: 90vw;
     height: auto;
+    border-radius: 2000px;
 }
+
 .name{
     grid-column: 1/6;
-    grid-row: 2;
+    grid-row: 1;
     text-align: center;
     color: white;
-    font-size: 160px;
+    font-size: 13vw;
     animation: fadein 5s;
     font-weight: bold;
+    padding-top: 11vh;
 }
+
 .menu{
     position: fixed;
     right: 10px;
     top: 10px;
     animation: 3s ease-out 0s 1 slideRight;
 }
+
 a{
     text-decoration: none;
-    /* color: inherit */
 }
+
 ul{
     list-style: none;
 }
+
 .menu ul li{
     width: 140px;
     border: 1px ;
     height: 50px;
     line-height: 50px;
-    text-align: center;
-    font-size: 14px;
+    text-align: right;
+    font-size: 20px;
+    padding-right: 3vw;
 }
+
 .menu ul li:hover{
     color:#C43217;
 }
+
 .arrow{
     position: fixed;
     left: 50px;
     bottom: 10px;
-    font-size: 100px;
+    font-size: 20vw;
     opacity: 60%;
-    animation: 4s ease-out 0s 1 slideDown;
-    /* display: none; */
+    animation: 5s ease-out 0s 1 slideDown;
+    animation:
 }
+
 .bio{
     grid-column: 2/5;
-    grid-row: 4/5;
-    /* padding: 16%; */
-    /* margin-left: 40%;
-    margin-right: 10%; */
-    z-index: 100;
-    font-size: 20px;
-    /* margin-top: 20%; */
-    margin: 25% 0% 0% 30%;
-    padding-left: 15%;
+    grid-row: 5/6;
+    font-size: 2vh;
+    padding-left: 25vw;
+    margin-top: 15vh;
 }
+
 .biopic{
-    grid-column: 1/3;
-    grid-row: 4;
-    padding-top: 40%;
-    padding-left: 30%;
-    padding-right: 10%;
+    grid-column: 1;
+    grid-row: 5;
+    padding-top: 4vh;
+    padding-left: 4vw;
+    padding-right: 4vw;
 }
+
 img#circle{
     border-radius: 50%;
-    max-width: 400px;
-    max-height: 400px;
+    max-width: 40vw;
+    max-height: 40vh;
 }
+
 .links{
-    grid-column: 3/6;
-    grid-row: 6;
-    /* text-align: center; */
-    margin-left: 13%;
+    grid-column: 2/5;
+    grid-row: 5;
+    padding-left: 25vw;
 }
+
 .click{
-    font-size: 60px;
+    font-size: 6vw;
     -webkit-text-stroke: 1px white;
     -webkit-text-fill-color: transparent;
     padding: 3%;
     transition: transform 500ms;
-    /* background: white; */
     color: white;
-    /* border-radius: 50%; */
-    /* border-radius: 50%; */
-    /* margin-right: 50px; */
-    /* height: 50px;
-    width: 50px; */
 }
+
 .click:hover{
     -webkit-text-fill-color: white;
 }
-.workpics{
-    grid-column: 1/-1;
-    grid-row: 7;
-    margin-left: 12%;
-    margin-right: 12%;
-}
-#bttmpic{
-    height: 500px;
-    width: auto;
-    padding: 2%;
-    z-index: -1;
-    /* display: none; */
-}
+
 .worktext{
-    color: pink;
-    /* grid-column: 1/-1; */
+    grid-column: 2/5;
     grid-row: 8;
-    /* grid-column: span; */
-    /* text-align: center; */
-    /* text-orientation: sideways; */
-    transform: rotate(-90deg);
+    text-align: center;
     font-size: 75px;
-    display: none;
 }
-/* a.txt1{
-    color: green;
-    grid-row: 8;
+
+.worktext:hover{
+    font-size: 100px;
 }
-a.txt2{
-    color: green;
-    grid-row: 8;
-}
-a.txt3{
-    color: green;
-    grid-row: 8;
-} */
+
 body{
     overflow-x: hidden;
-    background-color: #C43217;
+    background-color: #FF7D52;
     font-family: Verdana, sans-serif, monospace;
     text-transform: uppercase;
     padding: 0%;
 }
+
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }    
 }
+
 @keyframes slideDown {
     0% {
       transform: translateY(-1000%);
@@ -162,6 +141,7 @@ body{
       transform: translateY(0);
     }
 }
+
 @keyframes slideRight {
     0% {
       transform: translateX(100%);
@@ -170,10 +150,8 @@ body{
       transform: translateY(0);
     }
 }
-/* h1{
-    color: white;
-    font-size: 160px;
-} */
+
 *{
     color: white;
 }
+
